commit now w/ very simple core for adding sdf circles with smooth blending

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/stevekane/contour#readme",
   "dependencies": {
     "belle": "^3.0.1",
+    "big-triangle": "^1.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "regl": "^1.3.0"
