--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "regl": "^1.3.0"
   },
   "devDependencies": {
+    "chalk": "^1.1.3",
+    "ndarray": "^1.0.18",
     "reactify": "^1.1.1"
   }
 }
